[gd_scene load_steps=7 format=3 uid="uid://566wfnl0ax2o"]

[ext_resource type="Texture2D" uid="uid://bxogqg7h3dgcu" path="res://resources/items/_assets/items.png" id="1_fuqvk"]
[ext_resource type="Script" path="res://ui/shortcut_button/shortcut_button.gd" id="2_cd5v1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u4jth"]

[sub_resource type="InputEventAction" id="InputEventAction_yxr8j"]
action = &"none"

[sub_resource type="Shortcut" id="Shortcut_gmlks"]
events = [SubResource("InputEventAction_yxr8j")]

[sub_resource type="AtlasTexture" id="AtlasTexture_8bvb1"]
atlas = ExtResource("1_fuqvk")

[node name="PanelContainer" type="PanelContainer"]
offset_right = 152.0
offset_bottom = 31.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_u4jth")
script = ExtResource("2_cd5v1")

[node name="Button" type="Button" parent="." groups=["freeze_during_button_remap"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 235
theme_override_constants/icon_max_width = 18
shortcut = SubResource("Shortcut_gmlks")
shortcut_in_tooltip = false
text = " "
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="IconTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = SubResource("AtlasTexture_8bvb1")
expand_mode = 1
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LabelText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
